--- a/src/main/resources/templates/topten.html
+++ b/src/main/resources/templates/topten.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Top 10 Players</title>
+    <style>
+        body {
+            background-color: #F5F5F5;
+            font-family: Arial, sans-serif;
+        }
+        h2 {
+            color: rosybrown;
+        }
+        table {
+            margin-top: 20px;
+            border-collapse: collapse;
+        }
+        th, td {
+            padding: 8px;
+            border: 1px solid #ccc;
+            text-align: left;
+        }
+        a {
+            display: inline-block;
+            margin-top: 20px;
+            text-decoration: none;
+            background-color: rosybrown;
+            color: #fff;
+            padding: 10px 20px;
+            border-radius: 5px;
+            transition: background-color 0.2s ease;
+        }
+
+        a:hover {
+            background-color: #c35757;
+        }
+    </style>
 </head>
 <body>
-<h1>Top 10 Players</h1>
+<h2>Top 10 Players</h2>
 <table>
     <thead>
     <tr>
@@ -20,5 +52,7 @@
     </tr>
     </tbody>
 </table>
+
+<a href="/user">New game</a>
 </body>
 </html>
